# perdu

./: .gitignore  CMakeLists.txt  CMakePresets.json  tasks.txt  tmp.txt
cmake/: CompileShaders.cmake  CompilerOptions.cmake  FetchDependencies.cmake
examples/: CMakeLists.txt  minimal.cpp  testapp.cpp
include/perdu/app/: application.hpp  entity.hpp  entity_desc.hpp  input.hpp  scene.hpp  window.hpp
include/perdu/assets/: asset_cache.hpp  assets.hpp  resource_cache.hpp
include/perdu/components/: camera.hpp  mesh.hpp  meta.hpp  transform.hpp
include/perdu/core/: assert.hpp  clock.hpp  event.hpp  hash.hpp  log.hpp  maths.hpp  types.hpp
include/perdu/ecs/: auto_system.hpp  phase.hpp  system_registry.hpp
include/perdu/engine/: entity.hpp  scene.hpp
include/perdu/renderer/: gpu_context.hpp  mesh.hpp  pipeline.hpp  renderer.hpp  shader.hpp
shaders/: triangle.frag  triangle.vert
src/app/: CMakeLists.txt  application.cpp  input.cpp  scene.cpp  window.cpp
src/components/: CMakeLists.txt  camera.cpp  mesh.cpp  transform.cpp
src/core/: CMakeLists.txt  clock.cpp  log.cpp
src/ecs/: CMakeLists.txt  system_registry.cpp
src/engine/: CMakeLists.txt  asset_cache.cpp  scene.cpp
src/renderer/: CMakeLists.txt  compute.cpp  directories.hpp  gpu_context.cpp  mesh.cpp  pipeline.cpp  pipeline.hpp  pipeline_cache.cpp  pipeline_cache.hpp  renderer.cpp  renderer.hpp  renderview.cpp  shader.cpp  shader.hpp  shader_gen.cpp  shader_reflect.cpp
tests/: CMakeLists.txt
tests/benchmarks/: maths.cpp
tests/tests/: maths.cpp
